CHANGELOG

1.5.4
core:
* AddressGroup : new functions API_add(), API_remove(), function addObjectWhereIamUsed(), API_addObjectWhereIamUsed()
* Service : added tag support, new function addObjectWhereIamUsed(), API_addObjectWhereIamUsed()
* ServiceGroup : added tag support new function addObjectWhereIamUsed(), API_addObjectWhereIamUsed()

utils:
* rules-edit.php : new Actions 'description-append', 'securityProfile-Remove'
* rules-edit.php : create FastAPI modes for : 'enabled-set', 'logStart-Enable', 'logStart-Disable', 'logEnd-Enable', 'logEnd-Disable'
					'securityProfile-Group-Set'
* service-edit.php : new Action 'replaceWithObject', 'addObjectWhereUsed'
* address-edit.php : new Action 'replaceWithObject', 'addObjectWhereUsed'

bugfixes:
* rules-edit.php : destination zone calculation fix in


1.5.3
core:
* RuleStore function to get rule position 'getRulePosition()'

utils:
* address-edit.php : new Actions exportToExcel, name-addPrefix, name-addSuffix
* service-edit.php : new Actions exportToExcel, name-addPrefix, name-addSuffix, replaceGroupByService
* added a template to quick start your own scripts. look in examples\template-for-your-own-scripts.php

bugfixes:
* issue during creation of a new Service that failed to detect proper protocol


1.5.2
* switched classes constructors to __construct() which is mainstream for PHP5.4+ and 7.0
* major performance improvement when loading a configuration (added 'name to objects' indexes for fast searches)
* renamed address query filter "value eq" to "value string.eq" for string comparison
* new address query filters "value ip4.match.exact"
* rules-edit.php : improved zone calculation feature by allowing to load an external firewall
* rules-edit.php : new action exportToExcel

bugfixes:
* NatRule source nat hosts and types were incorrectly implemented


1.5.0
Library:
* 6.1 'rule-type' support (universal,intrazone,interzone) implemented. See SecurityRule->type() for details.